MODROLESKC-301: add upsert rest API method to create default loadable roles (#244)
(cherry picked from commit 891327d339a9c4e41d18f8adf3284e8618a3d31f)